--- a/attendance_planner.html
+++ b/attendance_planner.html
@@ -207,10 +207,10 @@
         <!-- PHOTO CAROUSEL -->
         <div class="carousel-container">
             <div class="carousel-slide">
-                <img src="CF01E8EF-DF66-45A5-B183-AFCA6E474D85.jpeg" alt="Photo 1">
-                <img src="FCD413D1-C4E5-4BC1-9CEF-E565512C93F7.jpeg" alt="Photo 2">
-                <img src="A3163C22-393B-472C-8FEE-63461A4E7180.jpeg" alt="Photo 3">
-                <img src="BB639391-0F8B-441C-9425-8EA1C0F90A45.jpeg" alt="Photo 4">
+                <img src="FE587BEE-B75A-4339-A4FC-4BDBE073A250.jpeg" alt="Photo 1">
+                <img src="IMG_0330.jpeg" alt="Photo 2">
+                <img src="IMG_3484.jpeg" alt="Photo 3">
+                <img src="IMG-5179.jpeg" alt="Photo 4">
             </div>
         </div>
 
