--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                 target: 75,
                 startDate: new Date('2025-06-10'),
                 examDate: new Date('2025-09-16'),
-                classDays: [1, 2], // Monday & Tuesday
+                classDays: [2], // Tuesday
                 timeSlot: "7:30 AM - 2:00 PM",
                 attendance: {}
             },
