--- a/index.html
+++ b/index.html
@@ -848,16 +848,105 @@
         .subject-card:nth-child(7) { animation-delay: 0.6s; }
         .subject-card:nth-child(8) { animation-delay: 0.7s; }
         .subject-card:nth-child(9) { animation-delay: 0.8s; }
+        .landing-hero {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 80vh;
+            text-align: center;
+            background: rgba(255,255,255,0.85);
+            border-radius: 32px;
+            box-shadow: 0 8px 32px rgba(31, 38, 135, 0.15);
+            margin: 40px auto;
+            max-width: 600px;
+            padding: 40px 20px;
+        }
+        .big-signin-btn {
+            background: linear-gradient(135deg, #4285F4 0%, #34A853 100%);
+            color: white;
+            font-size: 1.3rem;
+            font-weight: 700;
+            border: none;
+            border-radius: 12px;
+            padding: 18px 40px;
+            margin-top: 32px;
+            cursor: pointer;
+            box-shadow: 0 4px 20px rgba(66,133,244,0.15);
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            transition: background 0.2s, transform 0.2s;
+        }
+        .big-signin-btn:hover {
+            background: linear-gradient(135deg, #357ae8 0%, #2e7d32 100%);
+            transform: translateY(-2px) scale(1.03);
+        }
+        .user-info-block {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 32px;
+        }
+        .user-avatar {
+            width: 64px;
+            height: 64px;
+            border-radius: 50%;
+            margin-bottom: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        }
+        .logout-btn {
+            background: #f87171;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 10px 24px;
+            font-size: 1rem;
+            font-weight: 600;
+            margin-top: 16px;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        .logout-btn:hover {
+            background: #dc2626;
+        }
+        @media (max-width: 600px) {
+            .landing-hero {
+                padding: 24px 6px;
+                margin: 16px 0;
+            }
+            .big-signin-btn {
+                width: 100%;
+                font-size: 1.1rem;
+                padding: 16px 0;
+            }
+        }
     </style>
 </head>
 <body>
-    <!-- Google Login UI -->
-    <div id="firebase-auth-bar" style="display: flex; justify-content: flex-end; align-items: center; gap: 1em; margin-bottom: 1em; flex-wrap: wrap;">
-        <button id="google-login" style="padding: 0.5em 1.2em; border-radius: 8px; border: none; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-weight: 600; cursor: pointer;">Sign in with Google</button>
-        <button id="logout" style="display:none; padding: 0.5em 1.2em; border-radius: 8px; border: none; background: #f87171; color: white; font-weight: 600; cursor: pointer;">Logout</button>
-        <span id="user-info" style="font-size: 1em; color: #64748b;"></span>
+    <div id="landing-page">
+        <div class="landing-hero">
+            <h1>🎓 Academy of Architecture</h1>
+            <p class="subtitle">Smart Attendance Planning for Academic Excellence</p>
+            <div class="semester-info" style="margin: 24px 0;">
+                Final Year B.Arch - Semester IX | Session 2025-2026<br>
+                <strong>June 10, 2025 - September 16, 2025</strong>
+            </div>
+            <button id="big-google-login" class="big-signin-btn">
+                <svg width="28" height="28" viewBox="0 0 48 48"><g><path fill="#4285F4" d="M43.611 20.083H42V20H24v8h11.303C33.962 32.291 29.418 35 24 35c-6.065 0-11.236-4.06-13.09-9.665a14.996 14.996 0 010-11.67C12.764 12.06 17.935 8 24 8c3.238 0 6.19 1.14 8.495 3.01l6.366-6.366C34.58 1.61 29.547 0 24 0 10.745 0 0 10.745 0 24s10.745 24 24 24c12.073 0 22.045-8.805 23.611-20.083z"/><path fill="#34A853" d="M6.306 14.691l6.571 4.819C14.655 16.1 19.01 13 24 13c3.238 0 6.19 1.14 8.495 3.01l6.366-6.366C34.58 1.61 29.547 0 24 0 15.317 0 7.59 5.797 3.34 14.691z"/><path fill="#FBBC05" d="M24 48c5.522 0 10.553-1.89 14.495-5.14l-6.695-5.485C29.418 35 24 35 24 35c-6.065 0-11.236-4.06-13.09-9.665l-6.604 5.09C7.59 42.203 15.317 48 24 48z"/><path fill="#EA4335" d="M43.611 20.083H42V20H24v8h11.303c-1.13 3.01-3.62 5.291-6.303 6.375l6.695 5.485C41.41 41.14 48 34.5 48 24c0-1.61-.145-3.17-.389-4.917z"/></g></svg>
+                Sign in with Google
+            </button>
+            <div id="login-error" style="color:#e53e3e; margin-top:18px; font-weight:600; display:none;"></div>
+        </div>
     </div>
-    <div id="attendance-app">
+    <div id="user-block" style="display:none;">
+        <div class="user-info-block">
+            <img id="user-avatar" class="user-avatar" src="" alt="User Avatar" style="display:none;"/>
+            <div id="user-name" style="font-size:1.2em; font-weight:700;"></div>
+            <button id="logout-btn" class="logout-btn">Logout</button>
+        </div>
+    </div>
+    <div id="attendance-app" style="display:none;">
         <div class="main-container">
             <!-- Hero Section -->
             <div class="hero-section">
@@ -953,7 +1042,7 @@
       import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
       import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
 
-      // Your web app's Firebase configuration
+      // Fixed Firebase config
       const firebaseConfig = {
         apiKey: "AIzaSyAivmSS-l5RZ-pK5pQ1QnKbGHveLte3pHs",
         authDomain: "attendance-a7ada.firebaseapp.com",
@@ -969,9 +1058,13 @@
       const db = getFirestore(app);
 
       // UI elements
-      const loginBtn = document.getElementById('google-login');
-      const logoutBtn = document.getElementById('logout');
-      const userInfo = document.getElementById('user-info');
+      const landingPage = document.getElementById('landing-page');
+      const bigLoginBtn = document.getElementById('big-google-login');
+      const loginError = document.getElementById('login-error');
+      const userBlock = document.getElementById('user-block');
+      const userAvatar = document.getElementById('user-avatar');
+      const userName = document.getElementById('user-name');
+      const logoutBtn = document.getElementById('logout-btn');
       const attendanceApp = document.getElementById('attendance-app');
 
       // Helper: Save/load attendance to Firestore
@@ -1020,9 +1113,15 @@
       };
 
       // Auth logic
-      loginBtn.onclick = async () => {
-        const provider = new GoogleAuthProvider();
-        await signInWithPopup(auth, provider);
+      bigLoginBtn.onclick = async () => {
+        loginError.style.display = 'none';
+        try {
+          const provider = new GoogleAuthProvider();
+          await signInWithPopup(auth, provider);
+        } catch (err) {
+          loginError.textContent = err.message || 'Sign-in failed. Please try again.';
+          loginError.style.display = 'block';
+        }
       };
       logoutBtn.onclick = async () => {
         await signOut(auth);
@@ -1030,16 +1129,22 @@
       onAuthStateChanged(auth, async (user) => {
         firebaseUser = user;
         if (user) {
-          loginBtn.style.display = 'none';
-          logoutBtn.style.display = 'inline';
-          userInfo.textContent = `Signed in as ${user.displayName}`;
+          // Show user info
+          landingPage.style.display = 'none';
+          userBlock.style.display = 'block';
+          userName.textContent = user.displayName || user.email;
+          if (user.photoURL) {
+            userAvatar.src = user.photoURL;
+            userAvatar.style.display = 'block';
+          } else {
+            userAvatar.style.display = 'none';
+          }
           attendanceApp.style.display = '';
           await window.loadData();
           if (typeof window.updateDisplay === 'function') window.updateDisplay();
         } else {
-          loginBtn.style.display = 'inline';
-          logoutBtn.style.display = 'none';
-          userInfo.textContent = '';
+          landingPage.style.display = '';
+          userBlock.style.display = 'none';
           attendanceApp.style.display = 'none';
         }
       });
